Crud methods changed for operations on  Users

--- a/EcommerceWebApi/EcommerceWebApi.csproj
+++ b/EcommerceWebApi/EcommerceWebApi.csproj
@@ -299,7 +299,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ProfileImage\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
