--- a/EcommerceWebApi/EcommerceWebApi.csproj
+++ b/EcommerceWebApi/EcommerceWebApi.csproj
@@ -214,7 +214,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Entity\Category.cs" />
@@ -230,6 +232,14 @@
     <Compile Include="Migrations\201710010743288_adduserv1.cs" />
     <Compile Include="Migrations\201710010743288_adduserv1.Designer.cs">
       <DependentUpon>201710010743288_adduserv1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710011925123_InsertCategoryProduct.cs" />
+    <Compile Include="Migrations\201710011925123_InsertCategoryProduct.Designer.cs">
+      <DependentUpon>201710011925123_InsertCategoryProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710012001217_InsertcategoryDescription.cs" />
+    <Compile Include="Migrations\201710012001217_InsertcategoryDescription.Designer.cs">
+      <DependentUpon>201710012001217_InsertcategoryDescription.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -283,7 +293,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -316,6 +328,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710010743288_adduserv1.resx">
       <DependentUpon>201710010743288_adduserv1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710011925123_InsertCategoryProduct.resx">
+      <DependentUpon>201710011925123_InsertCategoryProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710012001217_InsertcategoryDescription.resx">
+      <DependentUpon>201710012001217_InsertcategoryDescription.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
